Fixed nav item alignment on small screen

--- a/src/options/pages/blueprints/ListFilters.module.scss
+++ b/src/options/pages/blueprints/ListFilters.module.scss
@@ -6,4 +6,7 @@
     font-size: 0.8rem;
     color: #bba8bff5;
   }
+  .nav {
+    flex-direction: column;
+  }
 }
